src/test/fail/bad_anon_call.ly
###
SyntaxError: Cannot anonymously call resulting type 'integer'.
Where: File "test/fail/bad_anon_call.ly" at line 6
###

10.@(integer)()
